--- a/client/src/index.html
+++ b/client/src/index.html
@@ -17,6 +17,8 @@
       <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/theme/monokai.min.css">
       </link>
+      <link rel="stylesheet" type="text/css" href="css/style.css">
+
   </head>
   <body>
     <nav id="navbar">
@@ -26,7 +28,7 @@
      <h1> Just Another Text Editor</h1>
      
       <div class="navbar-brand" 
-            ><img src="./assets/icons/icon_96x96.png"
+            ><img src="./images/logo.png"
           /></div>
     </nav>
 
